# antfly-python

./: .gitignore  .goreleaser.yaml  .openapi-generator-config.yaml  Makefile  README.md  openapi.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  pypi-publish.yml
antfly-client/: README.md  pyproject.toml
antfly-client/antfly_client/api/api_index/: create_index.py  drop_index.py  get_index.py  list_indexes.py
antfly-client/antfly_client/api/api_table/: backup_table.py  get_table.py  global_query.py  list_tables.py  lookup_key.py  query_table.py  restore_table.py
antfly-client/antfly_client/api/permission/: add_permission_to_user.py  get_user_permissions.py  remove_permission_from_user.py
antfly-client/antfly_client/api/user/: create_user.py  delete_user.py  get_user_by_name.py  update_user_password.py
antfly-client/antfly_client/models/: __init__.py  backup_table_response_201.py  batch_request_inserts.py  create_index_request.py  create_table_request.py  create_table_request_indexes.py  date_range.py  document_schema_fields.py  embedder_config.py  facet_result.py  google_config.py  index_config.py  index_config_config.py  index_status.py  index_status_shard_status.py  index_status_shard_status_additional_property.py  open_ai_config.py  permission.py  permission_type.py  query_hit.py  query_hit_index_scores.py  query_hit_source.py  query_hits.py  query_request.py  query_request_embeddings.py  query_request_facets.py  query_request_filter_query.py  query_result.py  query_result_facets.py  reranker.py  reranker_config.py  resource_type.py  restore_table_response_202.py  shard_config.py  storage_status.py  summarizer_config.py  table.py  table_indexes.py  term_facet_result.py  update_password_request.py  (+2 more)
docs/: api_reference.rst  conf.py  index.rst  installation.rst  quickstart.rst
examples/: advanced_search.py  basic_usage.py
src/antfly/: README.md  __init__.py  client.py  exceptions.py  pyproject.toml
src/antfly/client_generated/: __init__.py
src/antfly/client_generated/api/api_index/: create_index.py
src/antfly/client_generated/api/api_key/: create_api_key.py  delete_api_key.py  list_api_keys.py
src/antfly/client_generated/api/api_table/: answer_agent.py  batch.py  batch_table_operations.py  create_table.py  global_query.py  insert_documents.py  linear_merge.py  rag_query.py  table_rag_query.py  update_schema.py
src/antfly/client_generated/api/cluster_management/: backup.py  delete_secret.py  get_status.py  list_backups.py  list_secrets.py  put_secret.py  restore.py
src/antfly/client_generated/api/data_operations/: backup_table.py  batch.py  batch_write.py  commit_transaction.py  linear_merge.py  lookup_key.py  multi_batch_write.py  restore_table.py
src/antfly/client_generated/api/index_management/: create_index.py  drop_index.py  get_index.py  list_indexes.py
src/antfly/client_generated/api/permission/: add_permission_to_user.py  get_user_permissions.py  remove_permission_from_user.py
src/antfly/client_generated/api/query_operations/: answer_agent.py  evaluate.py  global_query.py  query_builder_agent.py
src/antfly/client_generated/api/table_management/: create_table.py  drop_table.py  get_table.py  list_tables.py  update_schema.py
src/antfly/client_generated/api/user/: create_user.py  delete_user.py  get_current_user.py  get_user_by_name.py  list_users.py  update_user_password.py
src/antfly/client_generated/models/: __init__.py  aggregation_bucket.py  aggregation_bucket_sub_aggregations.py  aggregation_date_range.py  aggregation_range.py  aggregation_result.py  aggregation_type.py  analyses.py  analyses_result.py  answer_agent_request.py  answer_agent_result.py  answer_agent_result_classification.py  answer_agent_steps.py  answer_confidence.py  answer_result.py  answer_step_config.py  antfly_chunker_config.py  antfly_chunker_config_full_text.py  antfly_embedder_config.py  antfly_reranker_config.py  antfly_type.py  anthropic_generator_config.py  api_key.py  api_key_with_secret.py  audio_chunk_options.py  backup_info.py  backup_list_response.py  backup_request.py  batch_request.py  batch_request_inserts.py  batch_request_inserts_additional_property.py  batch_request_sync_level.py  batch_response.py  batch_response_201.py  batch_response_201_failed_item.py  batch_table_operations_response_201.py  bedrock_config.py  bedrock_embedder_config.py  bedrock_generator_config.py  bing_search_config.py  (+297 more)
tests/: __init__.py  test_client.py  test_import_bugs.py
